markup: for header component

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,7 @@
-<p>header works!</p>
+<section class="page-wrapper">
+  <h2 class="page-wrapper__title">JSONPlaceholder</h2>
+  <nav class="page-wrapper__navigation">
+    <a class="page-wrapper__link" routerLink="/resources">Resources list</a>
+    <a class="page-wrapper__link" routerLink="/about">About</a>
+  </nav>
+</section>
