--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <section class="page-wrapper">
   <header class="page-wrapper__header">
-
+    <header></header>
   </header>
   <main class="page-wrapper__main">
     <router-outlet ></router-outlet>
