--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,7 @@
 .page-wrapper {
   height: 100%;
+  background: url("../assets/images/main-background.jpg") center no-repeat;
+  object-fit: cover;
 
   &__header {
     height: 8%;
