markup: for home component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,20 @@
-<p>home works!</p>
+<section class="page-wrapper">
+  <div class="flex-container">
+    <section class="heading">
+      <h1 class="heading__title">&#123;JSON&#125; Placeholder App</h1>
+      <h3 class="heading__description">Use to interact with JSONPlaceholder API</h3>
+    </section>
+    <div class="images">
+      <div class="image-container">
+        <img class="images__img" src="./assets/images/todo_47.png" alt="image_1">
+      </div>
+      <div class="image-container">
+        <img class="images__img" src="./assets/images/photo_70.png" alt="image_1">
+      </div>
+    </div>
+    <a class="page-wrapper__link" routerLink="/resources">Try it now</a>
+  </div>
+  <div class="page-wrapper__flex-image">
+    <img class="page-wrapper__img" src="./assets/images/user_8.png" alt="image_1">
+  </div>
+</section>
