fix(header): link in header
add link to header title and change route path in routing module

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <section class="page-wrapper">
-  <h2 class="page-wrapper__title">JSONPlaceholder</h2>
+  <a class="page-wrapper__title" routerLink="/home">JSONPlaceholder</a>
   <nav class="page-wrapper__navigation">
     <a class="page-wrapper__link" routerLink="/resources">Resources list</a>
     <a class="page-wrapper__link" routerLink="/about">About</a>
