--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -11,6 +11,9 @@
   &__title {
     font-size: 1.5rem;
     color: var(--header-text-color);
+    text-decoration: none;
+    font-weight: bold;
+    cursor: pointer;
   }
 
   &__navigation {
