feat(routing): lazy loading for posts list component

--- a/src/app/resources/resources.component.html
+++ b/src/app/resources/resources.component.html
@@ -1,6 +1,6 @@
 <section class="page-wrapper">
   <aside class="aside">
-    <a class="aside__link" routerLink="/posts">
+    <a class="aside__link" routerLink="posts">
       Posts
       <span class="material-symbols-rounded">chevron_right</span>
     </a>
