markup: for posts list component

--- a/src/app/resources/posts/posts-list/posts-list.component.html
+++ b/src/app/resources/posts/posts-list/posts-list.component.html
@@ -1,1 +1,17 @@
-<p>posts-list works!</p>
+<section class="page-wrapper">
+  <section class="sorting">
+    <div class="sorting__sort">
+      sort by:
+    </div>
+    <div class="sorting__filter">
+      filter by:
+    </div>
+    <div class="sorting__search">
+      search:
+    </div>
+  </section>
+  <main class="posts-list">
+    <div class="posts-list__post">some text</div>
+  </main>
+</section>
+
