markup: for posts-list-info component

--- a/src/app/resources/posts/posts-list-info/posts-list-info.component.html
+++ b/src/app/resources/posts/posts-list-info/posts-list-info.component.html
@@ -1,1 +1,8 @@
-<p>posts-list-info works!</p>
+<section class="page-wrapper">
+  <main class="post">
+    <h2 class="post__title">
+      <span class="post__id">{{post.id}}: </span>
+      {{post.title}}
+    </h2>
+  </main>
+</section>
