feat(routing): lazy loading for post-card
create post-card module & service,
add lazy loading for post-card component

--- a/src/app/resources/posts/posts-list-info/posts-list-info.component.html
+++ b/src/app/resources/posts/posts-list-info/posts-list-info.component.html
@@ -1,4 +1,4 @@
-<section class="page-wrapper">
+<section class="page-wrapper" [routerLink]="[postId]">
   <main class="post">
     <h2 class="post__title">
       <span class="post__id">{{post.id}}: </span>
