feat(routing): add lazy loading to comments-list

--- a/src/app/resources/resources.component.html
+++ b/src/app/resources/resources.component.html
@@ -4,7 +4,7 @@
       Posts
       <span class="material-symbols-rounded">chevron_right</span>
     </a>
-    <a class="aside__link" routerLink="/comments">
+    <a class="aside__link" routerLink="comments">
       Comments
       <span class="material-symbols-rounded">chevron_right</span>
     </a>
