markup: for comments-list component

--- a/src/app/resources/comments/comments-list/comments-list.component.html
+++ b/src/app/resources/comments/comments-list/comments-list.component.html
@@ -1,1 +1,16 @@
-<p>comments-list works!</p>
+<section class="page-wrapper">
+  <section class="sorting">
+    <div class="sorting__sort">
+      sort by:
+    </div>
+    <div class="sorting__filter">
+      filter by:
+    </div>
+    <div class="sorting__search">
+      search:
+    </div>
+  </section>
+  <main class="comments-list">
+    <div class="comments-list__comment"></div>
+  </main>
+</section>
