markup: for comments-list-info component

--- a/src/app/resources/comments/comments-list-info/comments-list-info.component.html
+++ b/src/app/resources/comments/comments-list-info/comments-list-info.component.html
@@ -1,1 +1,8 @@
-<p>comments-list-info works!</p>
+<section class="page-wrapper">
+  <main class="comment">
+    <h2 class="comment__title">
+      <span class="comment__id">{{comment.id}}: </span>
+      {{comment.name.charAt(0).toUpperCase() + comment.name.slice(1)}}
+    </h2>
+  </main>
+</section>
